Fixed the creation and viewing of user.

--- a/image-processor-rest-api/src/main/resources/messages.properties
+++ b/image-processor-rest-api/src/main/resources/messages.properties
@@ -1,3 +1,6 @@
+Email=must be an email
+NotBlank=field required
+NotNull=field required
 DecimalMin=must be greater than {0}
 DecimalMax=must be lesser or equal than than {0}
 Range=must be between {0} and {1}
